# deltatrace-backend

./: .env  Dockerfile  amelia.silva.txt  check_tools.py  generate_manual.py  generate_manual_final.py  gerar_manual.py  gilcileide.campos.txt  gilcileide.txt  gilcileide_campos.txt  gilcileidecampos.txt  lazaro.petenon.txt  pyproject.toml  requirements.txt
app/: database.py  db.py  fix_bom.py  main.py  main_backup.py  main_backup_com_erro.py  main_backup_fix_router.py  main_backup_sem_osint.py  schemas.py
app/api/: graph.py
app/auth/: routes.py  schemas.py
app/cases/: intake_routes.py  routes.py  schemas.py  service.py
app/cases_backup_original/: routes.py
app/common/: config.py  driver.py  security.py
app/core_osint/: routes.py  schemas.py
app/graph/: routes.py
app/graph_engine/: driver.py  routes.py
app/reports/: routes.py
app/reports/pf/: page.tsx
app/services/: extractor.py  report_generator.py
app/templates/: relatorio_pf_delta.html
reports/: report_gilcileide.campos_simple.json  report_gilcileide_campos_simple.json
